syntax = "proto2";

option java_package = "com.proto";
option java_outer_classname = "Control";
enum E_Ctrl{
	Left  = 1;  //按了左键
	Right = 2; //按了右键
	Shoot = 3; //射击键
}

// 控制协议
message MceControl {    
	required E_Ctrl controlType = 1;
	required bool isPressed     = 2; // 按下状态
}

